@@ -1,7 +1,7 @@
 <?php
 /* $Id$ */
 /*
- * PHPLOT Version 5.4.0 + unreleased changes
+ * PHPLOT Version 5.5.0
  *
  * A PHP class for creating scientific and business charts
  * Visit http://sourceforge.net/projects/phplot/
@@ -30,12 +30,12 @@
  * Maintainer (2006-present)
  * <lbayuk AT users DOT sourceforge DOT net>
  *
- * Requires PHP 5.2.x or later. (PHP 4 is unsupported as of Jan 2008)
+ * Requires PHP 5.2.x or later.
  */
 
 class PHPlot
 {
-    const version = '5.4.0-Unreleased $Revision$';
+    const version = '5.5.0';
 
     /* Declare class variables which are initialized to static values. Many more class variables
      * are used, defined as needed, but are unset by default.
